# lawson

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.lawson.db.yaml  docker-compose.milvus.gpu.yaml  lawson_ai.ipynb  pyproject.toml  requirements.txt
assets/: BACKLOG.md  NOTE.md  UV_SETUP.md
assets/data_samples/: followups.txt  legal_fabric.txt
assets/notebooks/: notebooks.ipynb
docs/: ENV_SETUP.md  README.md
docs/data_samples/: GDPR_qa_test_dataset_v2.csv
docs/notebooks/: lawson_ai.ipynb
lawson/: main.py
lawson/api/: __init__.py
lawson/api/routes/: qa_routes.py  (+5 more)
lawson/common/: constant.py  wrappers.py
lawson/core/: config.py
lawson/schemas/: base.py  embed_schemas.py  keyword_schemas.py  law_doc.py  lawdoc_schemas.py  qa_schemas.py
lawson/services/: base.py  helpers.py
lawson_ai/api/: __init__.py  embedding.py  keywords.py  qa.py
lawson_ai/routes/: keywords.py
lawson_ai/schemas/: __init__.py  keyword_schemas.py
lawson_data/: .dockerignore  .env.example  entrypoint.sh  notebooks.ipynb  pyproject.toml  requirements.txt
lawson_data/app/: main.py
lawson_data/app/api/: __init__.py
lawson_data/app/api/routes/: data_loader.py
lawson_data/app/common/: __init__.py  constant.py  exceptions.py  logging_config.py
lawson_data/app/core/: config.py
lawson_data/app/models/: law_doc.py
lawson_data/app/services/: __init__.py  pdf_parser.py  text_splitter.py
lawson_data/app/test/: conftest.py  test_pdf_parsing.py
scripts/: start_db.sh  version_increment.sh
tests/: conftest.py  test_embedding.py
(+16 files in other folders)
