[project]
name = "lawson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keybert>=0.8.5",
    "langchain-huggingface>=0.1.2",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "langchain-text-splitters>=0.3.4",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "colorlog>=6.9.0",
    "pytest>=8.3.4",
]
