[project]
name = "lawson-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.6",
    "langchain-text-splitters>=0.3.4",
    "langchain>=0.3.13",
    "pypdf>=5.1.0",
    "ruff>=0.8.4",
]
